# demos

./: README.md
demos/authpolicy-http/: .gitignore  README.md  echo-backend.py  praxis-authpolicy.yaml  run-demo.sh
demos/authpolicy-transpiler/: .gitignore  Cargo.toml  README.md
demos/authpolicy-transpiler/demo/: record_demo.py  record_e2e_demo.py
demos/authpolicy-transpiler/e2e/: .gitignore  build-praxis.sh  docker-compose.yml  echo-backend.py  praxis.yaml  run-demo.sh
demos/authpolicy-transpiler/src/: main.rs
demos/authpolicy-transpiler/src/authpolicy/: cel.rs  emit.rs  model.rs  report.rs  translate.rs
demos/authpolicy-transpiler/tests/fixtures/authpolicy/: apikey-opa.golden  gateway-defaults.golden  jwt-cel-http.golden  jwt-cel-http.yaml  jwt-rbac.golden
demos/cpex/: .gitignore  README.md  build-gateway.sh  cpex-cel.yaml  cpex.yaml  docker-compose.spire.yml  docker-compose.yml  praxis-baseline.yaml  restart.sh
demos/cpex/agent/: CHAT-WALKTHROUGH.md  chat.py
demos/cpex/agent/demo/: .gitignore  README.md  record_chat_demo.py  test_chat_demo.py
demos/cpex/auth-channel/: Dockerfile  requirements.txt  server.py
demos/cpex/docs/: benchmark.md
demos/cpex/gateway/: .gitignore  Cargo.toml  rust-toolchain.toml
demos/cpex/gateway/src/: main.rs
demos/cpex/hr-mcp-server/: server.py
demos/cpex/keycloak/: .dockerignore  Dockerfile  realm-export.json
demos/cpex/keycloak/ciba-spi/: README.md  pom.xml
demos/cpex/keycloak/ciba-spi/src/main/java/com/example/keycloak/ciba/: HttpAuthenticationChannelProvider.java  HttpAuthenticationChannelProviderFactory.java
demos/cpex/scenarios/: 02-alice-deny.sh  06-bob-apl-deny.sh  10-bob-adjust-under-threshold.sh  11-bob-adjust-approval.sh  _lib.sh
demos/cpex/scenarios/bench/: run-bench.sh
demos/cpex/spire/: configure-federated-client.sh  setup-spiffe-idp.sh
demos/cpex/spire/oidc/: oidc-discovery-provider.conf
demos/cpex/spire/server/: server.conf
demos/openai-conversations/: .gitignore  README.md  conversations.yaml  demo.cast  record.sh  run-demo.sh
demos/openai-conversations-multi-turn/: README.md  conversations-multi-turn.yaml  demo.cast  record.sh  run-demo.sh
demos/openai-responses-file-resolve/: README.md  demo.cast  file-resolve.yaml  record.sh  run-demo.sh  sample-doc.txt
demos/openai-responses-multi-turn/: demo.cast
demos/openai-responses-streaming-multi-turn/: README.md  demo.cast  record.sh  run-demo.sh  streaming-multi-turn.yaml
